--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body> 
     <h1><strong>Aliens vs. Astronauts</strong></h1>
     <p><strong>Made by: Naitwa-Alexandre.</strong></p>
-    <p><strong>All credits: Franks Laboratory</strong></p>
+
     <canvas id="canvas1"></canvas>
     <script src="script.js"></script>
+    
+    <div class="copyright">
+        <p>Copyright &copy; Franks Laboratory. All Right Reserved.</p>
+    </div>
 </body>
 </html>
